deployment/k8s/hasura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      io.apisnoop.graphql: hasura
  template:
    metadata:
      labels:
        io.apisnoop.graphql: hasura
    spec:
      restartPolicy: Always
      containers:
      - name: hasura
        image: "gcr.io/k8s-staging-apisnoop/hasura:v20200203-0.9.22-30-g8fc1acd"
        ports:
        - containerPort: 8080
