deployment/k8s/hasura/graphql-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graphql-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   nginx.ingress.kubernetes.io/auth-secret: basic-auth
  #   nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Hasura /v1 API'
  # annotations:
  #   nginx.ingress.kubernetes.io/app-root: /v1
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: hasura
          servicePort: 8080
