deployment/k8s/hasura/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hasura-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "hasura.local.ii.coop, hasura.local.ii.nz, hasura.local.sharing.io"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  
  rules:
  - host: hasura.localho.st
    http:
      paths:
      # - path: /hasura(/|$)(.*)
      - path: /
        backend:
          serviceName: hasura
          servicePort: 8080
